--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="./index.scss" />
   <title>Annika Lichtenstein | Senior Frontend Developer</title>
 </head>
 
 <body>
-  <h1>Hi!</h1>
-</body>
+  <module href="src/header/header.html"></module>
 
+  <main>
+    <module href="src/timeline/timeline.html"></module>
+  </main>
+</body>
 </html>
